--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-address-card fa-lg">Contact</span></a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a class="open1">
                     <span class="fa fa-sign-in"></span> Login</a>
                 </span>
             </div>
@@ -85,7 +85,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" data-toggle="modal" data-target="#reserveModal" class="btn btn-sm btn-block btn-warning">Reserve Table</a>
+                    <a role="button" class="open2 btn btn-sm btn-block btn-warning">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -279,6 +279,14 @@
                     $("#carouselButton").children("span").addClass('fa-pause');                    
                 }
             });
+
+    $(".open1").on("click",function(){
+        $('#loginModal').modal('toggle');
+    })
+    
+    $(".open2").on("click",function(){
+        $('#reserveModal').modal('toggle');
+    })
 </script>
 </body>
 
